2009-01-12 Guido Scholz <guido.scholz@bayernline.de>
	* ddl-s88.c: Fixed init of s88 buses number 2, 3 and 4.

2008-12-29 Joerg Rottland <rottland@users.sourceforge.net>
        * DDL: Fixes from Torsten Vogt for simultaneous use of DCC and MM
        * Configurable GA Adress shift (for backward compability)

--- Release 2.0.12 ----

2008-11-14 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in, i2c-dev.c: Kernel version independend i2c header
	integration.

2008-08-22 Guido Scholz <guido.scholz@bayernline.de>
	* srcpd.c: Open syslog after daemonization to fix missing
	logging under Cygwin.

2008-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* loconet.c: Fixed address shift for INFO GA, reported by David
	Rütti.

2008-03-27 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-gm.c: Fixed session id check for GM delivery.
	* srcp-command.c, clientservice.c: Terminating line break of
	incoming socket strings removed.
	* srcp-session.h: Session mode variable changed to enum type.

2008-03-04 Guido Scholz <guido.scholz@bayernline.de>
	* io.c, li100.c, loconet.c, m605x.c, portio.c, srcp-server.c,
	ttycygwin.*, zimo.c: Fixed some Cygwin compile issues.

2008-03-03 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-info.c: Fixed loss of info messages if they are send
	close one after another.

2008-01-29 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in: Fixed override of user defined CFLAGS variable.

2008-01-28 Guido Scholz <guido.scholz@bayernline.de>
	* man/srcpd.8, man/srcpd.conf.5: Fixed non ASCII characters.

--- Release 2.0.11 ----

2008-01-26 Jörg Rottland <rottland@users.sourceforge.net>
	* ddl.c, ddl_nmra.c: Support for PAGE mode,
	fix for functions F21-F28

2008-01-25 Guido Scholz <guido.scholz@bayernline.de>
	* ddl.c: Fixed system freeze on Linux 2.4 kernels using
	ddl-module.

2008-01-19 Jörg Rottland <rottland@users.sourceforge.net>
	* ddl.c: Re-activated improved timing,
	additional config parameter to allow filtering of SM commands
